--- a/foodom/templates/foodom/layout.html
+++ b/foodom/templates/foodom/layout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Abril+Fatface" />
-    <link href="{% static 'foodom/styles.css' %}?version=20" rel="stylesheet">
+    <link href="{% static 'foodom/styles.css' %}" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8491d7beab.js" crossorigin="anonymous"></script>
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
 </head>
